# sneridagh.dev

./: .cookieplone.json  CHANGELOG.md  Makefile  README.md  docker-compose.yml  repository.toml  towncrier.toml
.github/workflows/: backend.yml  frontend.yml  main.yml  manual_deploy.yml
aurora/: .cookieplone.json  .npmrc  Dockerfile  Makefile  README.md  mrs.developer.json  package.json  pnpm-lock.yaml  registry.config.ts
aurora/.github/workflows/: acceptance.yml  changelog.yml  code.yml  i18n.yml  storybook.yml  unit.yml
backend/: .gitignore  .mrbob.ini  CONTRIBUTORS.md  Dockerfile  Dockerfile.acceptance  LICENSE.md  Makefile  README.md  bobtemplate.cfg  constraints.txt  instance.yaml  mx.ini  pyproject.toml  requirements-docker.txt  requirements.txt
backend/news/: .changelog_template.jinja
backend/scripts/: create_site.py
backend/src/sneridagh_dev/: CHANGES.md  CONTRIBUTORS.md  LICENSE.md  MANIFEST.in  README.md  __init__.py  configure.zcml  dependencies.zcml  permissions.zcml  profiles.zcml  setup.py  testing.py
backend/src/sneridagh_dev/controlpanels/: configure.zcml
backend/src/sneridagh_dev/indexers/: configure.zcml
backend/src/sneridagh_dev/locales/: sneridagh_dev.pot  update.py
backend/src/sneridagh_dev/profiles/default/: browserlayer.xml  controlpanel.xml  metadata.xml  rolemap.xml  types.xml
backend/src/sneridagh_dev/profiles/default/registry/: main.xml  plone.base.interfaces.controlpanel.ISiteSchema.xml
backend/src/sneridagh_dev/profiles/default/types/: Folder.xml
backend/src/sneridagh_dev/profiles/uninstall/: browserlayer.xml
backend/src/sneridagh_dev/serializers/: configure.zcml
backend/src/sneridagh_dev/setuphandlers/: __init__.py  content.py  home.json  initial.py  users.json  users.py
backend/src/sneridagh_dev/src/sneridagh_dev/: __init__.py  configure.zcml  interfaces.py  permissions.zcml  profiles.zcml  testing.py
backend/src/sneridagh_dev/src/sneridagh_dev/browser/: configure.zcml
backend/src/sneridagh_dev/src/sneridagh_dev/content/: blogpost.py
backend/src/sneridagh_dev/src/sneridagh_dev/profiles/default/: metadata.xml  types.xml
backend/src/sneridagh_dev/src/sneridagh_dev/profiles/default/registry/: plone.base.interfaces.controlpanel.IMailSchema.xml
backend/src/sneridagh_dev/src/sneridagh_dev/profiles/default/types/: BlogPost.xml  Folder.xml
backend/src/sneridagh_dev/src/sneridagh_dev/profiles/initial/: metadata.xml
backend/src/sneridagh_dev/src/sneridagh_dev/upgrades/: configure.zcml
backend/src/sneridagh_dev/tests/: conftest.py
backend/src/sneridagh_dev/tests/setup/: test_setup_install.py  test_setup_uninstall.py
backend/src/sneridagh_dev/upgrades/: configure.zcml
backend/src/sneridagh_dev/vocabularies/: configure.zcml
backend/tests/: conftest.py
backend/tests/setup/: test_setup_install.py  test_setup_uninstall.py
devops/: Makefile  README-GHA.md  README.md
devops/etc/keys/: plone_prod_deploy_rsa.pub
devops/inventory/: hosts.yml
devops/inventory/group_vars/all/: base.yml  projects.yml
devops/stacks/: matomo.yml  portainer.yml  sneridagh.dev.yml  webserver.yml
devops/tasks/base/: task_docker.yml
frontend/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  Dockerfile  Dockerfile.seven  Makefile  README.md  mrs.developer.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  volto.config.js
frontend/.github/workflows/: changelog.yml
frontend/locales/: volto.pot
frontend/rr7/: Dockerfile  Makefile  package.json  pnpm-workspace.yaml  vite.config.ts
frontend/rr7/app/: config.server.ts  config.ts  content.tsx  okroute.tsx  root.tsx  utils.ts
frontend/src/addons/volto-sneridagh-dev/: README.md  package.json  towncrier.toml  tsconfig.json
frontend/src/addons/volto-sneridagh-dev/.github/workflows/: acceptance.yml
frontend/src/addons/volto-sneridagh-dev/src/: index.js  index.ts  one.scss  prism.scss  two.scss
frontend/src/addons/volto-sneridagh-dev/src/components/LeadImageSlot/: LeadImageSlot.tsx
frontend/src/addons/volto-sneridagh-dev/src/customizations/@kitconcept/volto-light-theme/components/Footer/: Footer.jsx
frontend/src/addons/volto-sneridagh-dev/src/customizations/@kitconcept/volto-light-theme/components/Header/: Header.jsx
frontend/src/addons/volto-sneridagh-dev/src/customizations/volto/components/manage/Blocks/LeadImage/: View.jsx
frontend/src/addons/volto-sneridagh-dev/src/customizations/volto/components/manage/Blocks/Title/: View.jsx
frontend/src/addons/volto-sneridagh-dev/src/customizations/volto/components/theme/ContentMetadataTags/: ContentMetadataTags.jsx
frontend/src/addons/volto-sneridagh-dev/src/theme/: _main.scss  prism-sneridagh.scss  theme.config
seven/: .TODO-eslintrc.js  Dockerfile  Makefile  mrs.developer.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  registry.config.ts
