[project]
name = "sneridagh_dev"
dynamic = ["version"]
description = "A new project using Plone 6."
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.13"
authors = [
    { name = "Victor Fernandez de Alba", email = "sneridagh@gmail.com" },
]
keywords = [
    "CMS",
    "Plone",
    "Python",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Framework :: Plone :: 6.2",
    "Framework :: Plone :: Addon",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Products.CMFPlone==6.2.0",
    "plone.api",
    "plone.restapi",
    "plone.volto",
    "kitconcept.voltolighttheme",
    "collective.blog>=1.0.0a5",
]

[dependency-groups]
test = [
    "horse-with-no-namespace",
    "plone.app.testing",
    "plone.restapi[test]",
    "pytest",
    "pytest-cov",
    "pytest-plone>=1.0.0a3",
]

container = [
    "plone.app.upgrade",
    "psycopg2==2.9.11",
    "relstorage==4.2.0",
    "zeo==6.1",
]

[project.urls]
Homepage = "https://github.com/collective/sneridagh-dev"
PyPI = "https://pypi.org/project/sneridagh_dev"
Source = "https://github.com/collective/sneridagh-dev"
Tracker = "https://github.com/collective/sneridagh-dev/issues"


[project.entry-points."plone.autoinclude.plugin"]
target = "plone"

[tool.uv]
managed = true
default-groups = ["test"]
constraint-dependencies = [
    "AccessControl==7.3",
    "Acquisition==6.2",
    "AuthEncoding==6.0",
    "BTrees==6.3",
    "Babel==2.18.0",
    "CacheControl==0.14.4",
    "Chameleon==4.6.0",
    "DateTime==6.0",
    "Deprecated==1.3.1",
    "DocumentTemplate==5.3",
    "ExtensionClass==6.2",
    "GitPython==3.1.49",
    "Jinja2==3.1.6",
    "Markdown==3.10.2",
    "MarkupSafe==3.0.3",
    "Missing==5.1",
    "MultiMapping==5.1",
    "Paste==3.10.1",
    "PasteDeploy==3.1.0",
    "Persistence==5.4",
    "Pillow==12.2.0",
    "Plone==6.2.0",
    "Products.BTreeFolder2==6.0",
    "Products.CMFCore==3.8",
    "Products.CMFDiffTool==5.0.0",
    "Products.CMFDynamicViewFTI==8.0.0",
    "Products.CMFEditions==5.0.0",
    "Products.CMFPlacefulWorkflow==4.0.0",
    "Products.CMFPlone==6.2.0",
    "Products.CMFUid==5.0",
    "Products.DCWorkflow==4.0",
    "Products.DateRecurringIndex==4.0.0",
    "Products.ExtendedPathIndex==6.0.0",
    "Products.ExternalMethod==6.1",
    "Products.GenericSetup==5.2",
    "Products.MailHost==6.1",
    "Products.MimetypesRegistry==4.0.0",
    "Products.PDBDebugMode==3.0.0",
    "Products.PlonePAS==9.0.0",
    "Products.PluggableAuthService==4.1",
    "Products.PluginRegistry==3.1",
    "Products.PortalTransforms==5.0.0",
    "Products.PrintingMailHost==2.1.0",
    "Products.PythonScripts==5.2",
    "Products.Sessions==6.2",
    "Products.SiteErrorLog==7.0",
    "Products.StandardCacheManagers==6.1",
    "Products.ZCatalog==7.3",
    "Products.ZopeVersionControl==5.1",
    "Products.isurlinportal==4.0.0",
    "Products.statusmessages==6.0.0",
    "Products.validation==4.0.1",
    "PyGithub==2.9.1",
    "PyJWT==2.12.1",
    "PyNaCl==1.6.2",
    "PySocks==1.7.1",
    "PyYAML==6.0.3",
    "Pygments==2.20.0",
    "Record==4.2",
    "RestrictedPython==8.1",
    "SecretStorage==3.5.0",
    "Sphinx==8.1.3; python_version == '3.10'",
    "Sphinx==9.0.4; python_version == '3.11'",
    "Sphinx==9.1.0; python_version > '3.11'",
    "Unidecode==1.4.0",
    "WSGIProxy2==0.5.1",
    "WebOb==1.8.9",
    "WebTest==3.0.7",
    "ZConfig==4.3",
    "ZODB3==3.11.0",
    "ZODB==6.3",
    "Zope2==4.0",
    "Zope==6.1",
    "ZopeUndo==6.1",
    "accessible-pygments==0.0.5",
    "alabaster==1.0.0",
    "anyio==4.13.0",
    "argcomplete==3.6.3",
    "argh==0.31.3",
    "async-generator==1.10",
    "attrs==26.1.0",
    "backports.cached-property==1.0.2",
    "backports.tarfile==1.2.0",
    "beautifulsoup4==4.14.3",
    "bleach==6.3.0",
    "borg.localrole==5.0.0",
    "build==1.5.0",
    "cached-property==2.0.1",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "check-manifest==0.51",
    "click-default-group==1.2.4",
    "click==8.3.3",
    "cmarkgfm==2025.10.22",
    "collective.MockMailHost==4.0.0",
    "collective.monkeypatcher==3.0.0",
    "collective.recipe.omelette==3.0.0",
    "collective.recipe.template==2.2",
    "collective.recipe.vscode==0.1.9",
    "collective.z3cform.datagridfield==4.0.2",
    "colorama==0.4.6",
    "commonmark==0.9.1",
    "configparser==7.2.0",
    "coverage==7.13.5",
    "cryptography==47.0.0",
    "cssselect==1.4.0",
    "decorator==5.2.1",
    "diazo==2.0.6",
    "distro==1.9.0",
    "docutils==0.21.2; python_version == '3.10'",
    "docutils==0.22.4; python_version > '3.10'",
    "entry-points-txt==0.3.0",
    "exceptiongroup==1.3.0; python_version == \"3.10\"",
    "exceptiongroup==1.3.0; python_version == '3.10'",
    "exceptiongroup==1.3.1; python_version > \"3.10\"",
    "fancycompleter==0.11.1",
    "feedparser==6.0.12",
    "filelock==3.29.0",
    "five.customerize==4.1",
    "five.intid==3.1.0",
    "five.localsitemanager==5.0",
    "furl==2.1.4",
    "furo==2025.12.19",
    "future==1.0.0",
    "gitdb==4.0.12",
    "gunicorn==25.3.0",
    "h11==0.16.0",
    "headerparser==0.5.2",
    "horse-with-no-namespace==20260202.0",
    "httplib2==0.31.2",
    "httpx==0.28.1",
    "i18ndude==6.3.0",
    "icalendar==7.1.1",
    "id==1.6.1",
    "idna==3.12",
    "imagesize==2.0.0",
    "importlib-metadata==9.0.0",
    "importlib-resources==7.1.0",
    "incremental==24.11.0",
    "iniconfig==2.3.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.1.2",
    "jaraco.functools==4.4.0",
    "jeepney==0.9.0",
    "jsonschema-specifications==2025.9.1",
    "jsonschema==4.26.0",
    "keyring==25.7.0",
    "legacy-cgi==2.6.4",
    "lockfile==0.12.2",
    "lxml-html-clean==0.4.4",
    "lxml==6.1.0",
    "manuel==1.13.0",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "mock==5.2.0",
    "more-itertools==11.0.2",
    "mr.developer==2.0.4",
    "msgpack==1.1.2",
    "multipart==1.3.1",
    "mxdev==5.1.0",
    "natsort==8.4.0",
    "nh3==0.3.5",
    "nt-svcutils==2.13.0",
    "oauthlib==3.3.1",
    "orderedmultidict==1.0.2",
    "outcome==1.3.0post0",
    "overrides==7.7.0",
    "packaging==26.1",
    "pdbpp==0.12.1",
    "pep440==0.1.2",
    "pep517==0.13.1",
    "persistent==6.5",
    "piexif==1.1.3",
    "pip==26.1.1",
    "plone.alterego==3.0.0",
    "plone.api==3.0.0",
    "plone.app.blocks==8.0.0",
    "plone.app.caching==5.0.0",
    "plone.app.content==5.0.0",
    "plone.app.contentlisting==4.0.0",
    "plone.app.contentmenu==4.0.0",
    "plone.app.contentrules==6.0.0",
    "plone.app.contenttypes==5.0.0",
    "plone.app.customerize==3.0.0",
    "plone.app.debugtoolbar==2.0.0",
    "plone.app.dexterity==5.0.0",
    "plone.app.discussion==6.0.0",
    "plone.app.drafts==3.0.0",
    "plone.app.event==6.0.0",
    "plone.app.i18n==5.0.0",
    "plone.app.intid==3.0.0",
    "plone.app.iterate==7.0.0",
    "plone.app.layout==6.0.1",
    "plone.app.linkintegrity==5.0.0",
    "plone.app.locales==7.0.2",
    "plone.app.lockingbehavior==3.0.0",
    "plone.app.mosaic==4.0.0",
    "plone.app.multilingual==9.0.0",
    "plone.app.portlets==7.0.0",
    "plone.app.querystring==3.0.0",
    "plone.app.redirector==4.0.0",
    "plone.app.registry==3.0.0",
    "plone.app.relationfield==5.0.0",
    "plone.app.robotframework==3.0.0",
    "plone.app.standardtiles==4.0.0",
    "plone.app.testing==8.0.0",
    "plone.app.textfield==4.0.0",
    "plone.app.theming==7.0.0",
    "plone.app.tiles==5.0.0",
    "plone.app.upgrade==4.0.0",
    "plone.app.users==4.0.0",
    "plone.app.uuid==3.0.0",
    "plone.app.versioningbehavior==3.0.0",
    "plone.app.viewletmanager==5.0.0",
    "plone.app.vocabularies==7.0.0",
    "plone.app.widgets==6.0.0",
    "plone.app.workflow==6.0.0",
    "plone.app.z3cform==5.0.0",
    "plone.autoform==3.0.0",
    "plone.autoinclude==3.0.0",
    "plone.base==4.0.0",
    "plone.batching==3.0.0",
    "plone.behavior==3.0.0",
    "plone.browserlayer==4.0.0",
    "plone.cachepurging==4.0.0",
    "plone.caching==3.0.0",
    "plone.classicui==2.0.0",
    "plone.contentrules==4.0.0",
    "plone.dexterity==4.0.0",
    "plone.distribution==4.0.0",
    "plone.event==3.0.0",
    "plone.exportimport==2.0.1",
    "plone.folder==5.0.0",
    "plone.formwidget.autocomplete==2.0.0",
    "plone.formwidget.namedfile==4.0.0",
    "plone.formwidget.recurrence==4.0.0",
    "plone.i18n==6.0.0",
    "plone.indexer==3.0.0",
    "plone.intelligenttext==5.0.0",
    "plone.jsonserializer==1.0.0",
    "plone.keyring==5.0.0",
    "plone.locking==4.0.0",
    "plone.memoize==4.0.0",
    "plone.namedfile==8.0.0",
    "plone.outputfilters==6.0.0",
    "plone.portlet.collection==5.0.0",
    "plone.portlet.static==5.0.0",
    "plone.portlets==4.0.0",
    "plone.protect==6.0.0",
    "plone.recipe.command==1.1",
    "plone.recipe.zeoserver==4.0.0",
    "plone.recipe.zope2instance==9.0.0",
    "plone.registry==3.0.0",
    "plone.releaser==3.0.2",
    "plone.reload==5.0.0",
    "plone.resource==4.0.0",
    "plone.resourceeditor==5.0.0",
    "plone.rest==6.0.0",
    "plone.restapi==10.0.0",
    "plone.rfc822==4.0.0",
    "plone.scale==5.0.0",
    "plone.schema==3.0.0",
    "plone.schemaeditor==5.0.0",
    "plone.session==5.0.0",
    "plone.staticresources==3.0.0",
    "plone.stringinterp==3.0.0",
    "plone.subrequest==3.0.0",
    "plone.supermodel==3.0.0",
    "plone.testing==10.0.0",
    "plone.theme==5.0.0",
    "plone.tiles==4.0.0",
    "plone.transformchain==4.0.0",
    "plone.uuid==3.0.0",
    "plone.versioncheck==2.0.1",
    "plone.volto==6.0.0",
    "plone.z3cform==3.0.0",
    "plonetheme.barceloneta==4.0.3",
    "pluggy==1.6.0",
    "progress==1.6.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "py==1.11.0",
    "pyOpenSSL==26.1.0",
    "pycparser==3.0",
    "pyparsing==3.3.2",
    "pyproject-hooks==1.2.0",
    "pyrepl==0.11.4",
    "pyroma==5.0.1",
    "pyrsistent==0.20.0",
    "pytest-cov==7.1.0",
    "pytest==9.0.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-gettext==5.0",
    "pytz==2026.1.post1",
    "pywin32-ctypes==0.2.3; platform_system == \"Windows\"",
    "readme-renderer==44.0",
    "referencing==0.37.0",
    "repoze.xmliter==2.0",
    "requests-toolbelt==1.0.0",
    "requests==2.33.1",
    "responses==0.26.0",
    "rfc3986==2.0.0",
    "rich==15.0.0",
    "robotframework-assertion-engine==3.0.3",
    "robotframework-browser==19.10.1",
    "robotframework-debuglibrary==2.5.0",
    "robotframework-lsp==1.13.0",
    "robotframework-pythonlibcore==4.4.1",
    "robotframework-selenium2library==3.0.0",
    "robotframework-selenium2screenshots==0.8.1",
    "robotframework-seleniumlibrary==6.8.0",
    "robotframework-seleniumtestability==2.1.0",
    "robotframework==7.3.2",
    "robotsuite==3.0.1",
    "roman-numerals==4.1.0",
    "roman==5.2",
    "rpds-py==0.30.0",
    "seedir==0.5.1",
    "selenium==4.9.1",
    "setuptools==81.0.0",
    "sgmllib3k==1.0.0",
    "simplejson==4.1.1",
    "six==1.17.0",
    "smmap==5.0.3",
    "sniffio==1.3.1",
    "snowballstemmer==3.0.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.3",
    "sphinx-basic-ng==1.0.0b2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "stdlib-list==0.12.0",
    "tempstorage==6.0",
    "toml==0.10.2",
    "tomli==2.2.1; python_version == \"3.10\"",
    "tomli==2.2.1; python_version == '3.10'",
    "tomli==2.3.0; python_version > \"3.10\"",
    "towncrier==25.8.0",
    "transaction==5.1",
    "trio-websocket==0.12.2",
    "trio==0.33.0",
    "trove-classifiers==2026.5.7.17",
    "twine==6.2.0",
    "types-PyYAML==6.0.12.10",
    "types-toml==0.10.8.5",
    "typing-extensions==4.15.0",
    "tzdata==2026.2",
    "urllib3-secure-extra==0.1.0",
    "urllib3==2.6.3",
    "wadllib==2.0.0",
    "waitress==3.0.2",
    "watchdog==6.0.0",
    "wcwidth==0.7.0",
    "webencodings==0.5.1",
    "webresource==2.0.0",
    "wheel-filename==2.1.0",
    "wheel-inspect==1.8.0",
    "wheel==0.47.0",
    "wmctrl==0.5",
    "wrapt==2.1.2",
    "wsproto==1.3.2",
    "z3c.caching==4.0",
    "z3c.checkversions==3.0",
    "z3c.dependencychecker==2.15; python_version == \"3.10\"",
    "z3c.dependencychecker==3.0; python_version > \"3.10\"",
    "z3c.form==6.0.1",
    "z3c.formwidget.query==3.0",
    "z3c.jbot==3.1",
    "z3c.objpath==3.0",
    "z3c.pt==5.1",
    "z3c.relationfield==3.1",
    "z3c.unconfigure==3.0",
    "z3c.zcmlhook==3.0",
    "zExceptions==6.0",
    "zc.buildout==5.2.0",
    "zc.lockfile==4.0",
    "zc.recipe.egg==4.0.0",
    "zc.recipe.testrunner==4.0",
    "zc.relation==3.0",
    "zdaemon==5.2.1",
    "zest.pocompile==2.0.0",
    "zest.releaser==9.9.0",
    "zestreleaser.towncrier==2.0.1",
    "zipp==3.23.1",
    "zodbpickle==4.3",
    "zodbupdate==3.0",
    "zodbverify==1.2.1",
    "zope.annotation==6.0",
    "zope.app.locales==6.0",
    "zope.browser==4.0",
    "zope.browsermenu==6.0",
    "zope.browserpage==6.0",
    "zope.browserresource==6.0",
    "zope.cachedescriptors==6.0",
    "zope.component==7.1",
    "zope.componentvocabulary==4.0",
    "zope.configuration==7.1",
    "zope.container==7.2",
    "zope.contentprovider==7.0",
    "zope.contenttype==6.0",
    "zope.copy==6.0",
    "zope.datetime==6.0",
    "zope.deferredimport==6.1.1",
    "zope.deprecation==6.0",
    "zope.dottedname==7.1",
    "zope.event==6.1",
    "zope.exceptions==6.0",
    "zope.filerepresentation==7.0",
    "zope.globalrequest==3.0",
    "zope.hookable==8.2",
    "zope.i18n==6.0",
    "zope.i18nmessageid==8.2",
    "zope.interface==8.3",
    "zope.intid==6.0",
    "zope.keyreference==7.0",
    "zope.lifecycleevent==6.0",
    "zope.location==6.0",
    "zope.mkzeoinstance==6.0",
    "zope.pagetemplate==6.1",
    "zope.processlifetime==4.0",
    "zope.proxy==7.1",
    "zope.ptresource==6.0",
    "zope.publisher==8.0",
    "zope.pytestlayer==9.1",
    "zope.ramcache==4.0",
    "zope.schema==8.1",
    "zope.security==8.3",
    "zope.sendmail==7.1",
    "zope.sequencesort==6.0",
    "zope.site==6.0",
    "zope.size==6.0",
    "zope.structuredtext==6.0",
    "zope.tal==6.0",
    "zope.tales==7.0",
    "zope.testbrowser==8.0",
    "zope.testing==6.1",
    "zope.testrunner==8.2",
    "zope.traversing==6.0",
    "zope.viewlet==6.0",
]

[tool.hatch.version]
path = "src/sneridagh_dev/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
strict-naming = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sneridagh_dev"]

[tool.towncrier]
directory = "news/"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
template = "news/.changelog_template.jinja"
issue_format = "[#{issue}](https://github.com/collective/sneridagh-dev/issues/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes:"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal:"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation:"
showcontent = true

[[tool.towncrier.type]]
directory = "tests"
name = "Tests"
showcontent = true

[tool.ruff]
target-version = "py313"
line-length = 88
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]
lint.ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.isort]
case-sensitive = false
no-sections = true
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "RUF001", "S101"]

[tool.check-manifest]
ignore = [
    ".editorconfig",
    ".flake8",
    "dependabot.yml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["sneridagh_dev", "tests"]
branch = true
parallel = true
omit = [
  "src/sneridagh_dev/locales/*.py",
]
